# controller/UserController.go
@@ -1,7 +1,6 @@
 package controller
 
 import (
-	"fmt"
 	"github.com/gin-gonic/gin"
 	"github.com/shicli/gin-first/common"
 	"github.com/shicli/gin-first/dto"
@@ -21,9 +20,9 @@ type Article struct {
 }
 
 // @Summary 注册信息
-// @Param name formData string false "名字"
-// @Param password formData string false "密码"
-// @Param telemetry formData string false "电话"
+// @Param Name controller. string false "名字"
+// @Param Password query string false "密码"
+// @Param Telemetry query string false "电话"
 // @Success 200 {object} Article "成功"
 // @Failure 400 {object} string "请求错误"
 // @Failure 500 {object} string "内部错误"
@@ -31,7 +30,7 @@ type Article struct {
 func Register(ctx *gin.Context) {
 	DB := common.GetDB()
 	var requestUser = model.User{}
-	ctx.ShouldBind(&requestUser)
+	ctx.Bind(&requestUser)
 
 	//获取参数
 	name := requestUser.Name
@@ -39,7 +38,6 @@ func Register(ctx *gin.Context) {
 	password := requestUser.Password
 
 	//数据验证
-	fmt.Println(telephone, "手机号码长度", len(telephone))
 	if len(telephone) != 11 {
 		response.Response(ctx, http.StatusUnprocessableEntity, 422, nil, "手机号必须为11位")
 		return
@@ -48,20 +46,23 @@ func Register(ctx *gin.Context) {
 		response.Response(ctx, http.StatusUnprocessableEntity, 422, nil, "密码不能少于6位")
 		return
 	}
+
+	//如果没有传入名称，给一个10位的随机数
 	if len(name) == 0 {
 		name = util.RandString(10)
 	}
 
 	//判断手机号码是否存在
-	if isTelephoneExists(DB, telephone) {
+	if isTelephoneExists(DB, name) {
 		response.Response(ctx, http.StatusUnprocessableEntity, 422, nil, "用户已经存在")
+		log.Printf("用户已经存在")
 		return
 	}
 
-	//创建用户
+	//创建用户，加密
 	hasePassword, err := bcrypt.GenerateFromPassword([]byte(password), bcrypt.DefaultCost)
 	if err != nil {
-		response.Response(ctx, http.StatusUnprocessableEntity, 500, nil, "加密失败")
+		response.Response(ctx, http.StatusInternalServerError, 500, nil, "加密失败")
 		return
 	}
 
@@ -72,25 +73,71 @@ func Register(ctx *gin.Context) {
 	}
 	DB.Create(&newUser)
 
-	token, _ := common.GenerateToken(newUser)
+	token, err := common.ReleaseToken(newUser)
 	if err != nil {
 		response.Response(ctx, http.StatusUnprocessableEntity, 500, nil, "系统异常")
 		log.Printf("token generate error: %v", err)
 		return
 	}
+
 	response.Success(ctx, gin.H{"token": token}, "注册成功")
+}
+
+func Login(ctx *gin.Context) {
+	DB := common.GetDB()
+	var requestUser = model.User{}
+	ctx.Bind(&requestUser)
+	//获取参数
+	//name := requestUser.Name
+	telephone := requestUser.Telephone
+	password := requestUser.Password
+	//数据验证
+	if len(telephone) != 11 {
+		response.Response(ctx, http.StatusUnprocessableEntity, 422, nil, "手机号必须为11位")
+		return
+	}
+	if len(password) < 6 {
+		response.Response(ctx, http.StatusUnprocessableEntity, 422, nil, "密码不能少于6位")
+		return
+	}
+	//判断手机号码是否存在
+	var user model.User
+	DB.Where("telephone = ?", telephone).First(&user)
+	if user.ID == 0 {
+		response.Response(ctx, http.StatusUnprocessableEntity, 422, nil, "手机号不存在")
+		return
+	}
+
+	//判断密码是否正确
+	if err := bcrypt.CompareHashAndPassword([]byte(user.Password), []byte(password)); err != nil {
+		ctx.JSON(http.StatusBadRequest, gin.H{"code": 400, "msg": "密码错误"})
+		return
+	}
+
+	//发放token
+	token, err := common.ReleaseToken(user)
+	if err != nil {
+		response.Response(ctx, http.StatusUnprocessableEntity, 500, nil, "系统异常")
+		log.Printf("token generate error: %v", err)
+		return
+	}
+
+	//返回结果
+	response.Success(ctx, gin.H{"data": token}, "登陆成功")
 }
 
 func Info(ctx *gin.Context) {
 	user, _ := ctx.Get("user")
 	ctx.JSON(http.StatusOK, gin.H{
 		"code": 200,
+		//"data": gin.H{"user": user},
+		//重新定义返回的信息,user包含敏感信息
 		"data": gin.H{"user": dto.ToUserDto(user.(model.User))},
 	})
 }
 
-func isTelephoneExists(db *gorm.DB, telephone string) bool {
+func isTelephoneExists(db *gorm.DB, name string) bool {
 	var user model.User
-	db.Where("telephone = ?", telephone).First(&user)
+	db.Where("name = ?", name).First(&user)
 	return user.ID != 0
 }
