# docs/swagger.json
@@ -16,20 +16,20 @@
                     {
                         "type": "string",
                         "description": "名字",
-                        "name": "name",
-                        "in": "formData"
+                        "name": "Name",
+                        "in": "query"
                     },
                     {
                         "type": "string",
                         "description": "密码",
-                        "name": "password",
-                        "in": "formData"
+                        "name": "Password",
+                        "in": "query"
                     },
                     {
                         "type": "string",
                         "description": "电话",
-                        "name": "telemetry",
-                        "in": "formData"
+                        "name": "Telemetry",
+                        "in": "query"
                     }
                 ],
                 "responses": {
